tests/cases/generics/errors/err_bare_any_param.aipl
// `any` may only appear as `any[]` or `any?` in a parameter — a bare `any`
// parameter is rejected.
fn g(x: any) -> i64 { 0 }

fn main() -> i64 { 0 }
--- errors ---
error: fn "g": bare "any" is not allowed; use "any[]", "any?", or a named type parameter "<T: any>"
